--- a/assets/style.css
+++ b/assets/style.css
@@ -7,8 +7,8 @@ body{
     font-family: sans-serif;
 }
 .login-box{
-    width: 320px;
-    height: 420px;
+    width: 80%;
+    height: 85%;
     background: rgba(0, 0, 0, 0.5);
     color: #fff;
     top: 50%;
@@ -23,6 +23,11 @@ h1{
     padding: 0 0 20px;
     text-align: center;
     font-size: 22px;
+}
+h2{
+    margin: 0;
+    padding: 10px;
+    text-align: center;
 }
 .login-box p{
     margin: 0;
@@ -83,7 +88,7 @@ h1{
 .footer h2{
     font-size: 16pt;
 }
-/**for mobile toggle**/
+/*for mobile toggle*/
 @media only screen and (max-width: 600px) {
     body {
     margin: 0;
@@ -96,7 +101,7 @@ h1{
     
 .login-box{
     width: 80%;
-    height: 70%;
+    height: 90%;
     background: rgba(0, 0, 0, 0.5);
     color: #fff;
     top: 50%;
@@ -111,6 +116,12 @@ h1{
     padding: 0 0 20px;
     text-align: center;
     font-size: 28px;
+}
+
+h2{
+    margin: 0;
+    padding: 10px;
+    text-align: center;
 }
 .login-box p{
     margin: 0;
